--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2020",
+        "target": "es6",
         "outDir": "out",
         "lib": [
-            "ES2020"
+            "es6",
+            "dom"
         ],
         "sourceMap": true,
         "rootDir": "src",
-        "strict": true
+        "strict": false,
+        "esModuleInterop": true
     },
+    "include": [
+        "src/**/*.ts"
+    ],
     "exclude": [
         "node_modules",
         ".vscode-test"
